recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:13: error: not found: value steps
  if (steps==0) {
      ^